<resources>
    <string name="app_name">JDiary</string>

    <!--  Register & Login Activities.  -->
    <string name="welcome_register_text">Добро пожаловать.\nЗарегистрируйтесь в системе</string>
    <string name="welcome_login_text">Добро пожаловать.\nВойдите в систему</string>

    <string name="edit_text_username">Юзернейм</string>
    <string name="edit_text_phone_number">Номер телефона</string>
    <string name="edit_text_mail">Электронная почта</string>
    <string name="edit_text_password">Пароль</string>
    <string name="edit_text_accept_password">Подтвердите пароль</string>
    <string name="button_select_class">Выбрать класс</string>

    <string name="button_register">Регистрация</string>
    <string name="button_enter">Вход</string>

    <string name="no_account_text">Нет аккаунта?</string>
    <string name="has_account_text">Уже есть аккаунт?</string>

    <string name="button_no_account_enter">Зарегистрироваться</string>
    <string name="button_has_account_enter">Войти</string>

    <!--  Navigation Drawler.-->
    <string name="navigation_drawer_open">Открыть навигацию</string>
    <string name="navigation_drawer_close">Закрыть навигацию</string>

    <!--  Drawler Menu.  -->
    <string name="nav_profile_string">Профиль</string>
    <string name="nav_home_string">Главная</string>
    <string name="nav_myclass_string">Мой класс</string>
    <string name="nav_diary_string">Дневник</string>
    <string name="nav_schedule_string">Расписание</string>
    <string name="nav_tests_string">Тесты</string>
    <string name="nav_notes_string">Заметки</string>

    <!-- Notes Fragment. -->
    <string name="add_note_text">Новая заметка</string>

    <!--  Notes dialog. -->
    <string name="nav_input_title">Название заметки</string>
    <string name="nav_input_content">Текст заметки</string>


    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="close">Закрыть</string>

    <!--  Profile.  -->
    <string name="my_achievements_text">Достижения</string>


</resources>