<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/nav_profile_string"/>

    <item
        android:id="@+id/nav_myclass"
        android:icon="@drawable/ic_group"
        android:title="@string/nav_myclass_string" />

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_diary_string"/>

    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/nav_schedule_string"/>

    <item
        android:id="@+id/nav_tests"
        android:icon="@drawable/ic_assignment"

        android:title="@string/nav_tests_string"/>

    <item
        android:id="@+id/nav_notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/nav_notes_string"/>
</menu>