<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/card_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <TextView
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="12dp"
        android:text="@string/add_note_text"
        android:textColor="@color/main_text"/>

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nav_input_title"
        android:inputType="text"
        android:layout_marginTop="8dp"
        android:padding="12dp"
        android:textColor="@color/main_text"
        android:textColorHint="@color/input_hint"
        android:background="@drawable/rounded_edit_text"/>

    <EditText
        android:id="@+id/edit_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nav_input_content"
        android:inputType="textMultiLine"
        android:layout_marginTop="18dp"
        android:padding="12dp"
        android:gravity="top|start"
        android:textColor="@color/main_text"
        android:textColorHint="@color/input_hint"
        android:background="@drawable/rounded_edit_text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                app:strokeWidth="2.5dp"
                app:strokeColor="@color/light_blue"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/light_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="8dp"
                android:padding="15dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                app:cornerRadius="8dp"
                app:strokeWidth="2.5dp"
                app:strokeColor="@color/light_blue"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/save"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/light_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="8dp"
                android:padding="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>